better test framework integration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ log = "*"
 [dev-dependencies]
 assert_cmd = "*"
 assert_fs = "*"
+datatest-stable = "0.3.2"
 # dir-diff = "*"
 # duct = "*"
 # predicates = "*"
@@ -25,3 +26,7 @@ serde = { version = "1.0.217", features = ["derive"] }
 # rexpect = "*"
 toml = "0.8.19"
 # tempfile = "*"
+
+[[test]]
+name = "test_main"
+harness = false
