--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,13 @@ confy = "*"
 env_logger = "*"
 human-panic = "*"
 log = "*"
+serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
+toml = "0.8.20"
 
 [dev-dependencies]
 assert_cmd = "*"
-# assert_fs = "*"
+assert_fs = "*"
+datatest-stable = "0.3.2"
 # dir-diff = "*"
 # duct = "*"
 # predicates = "*"
@@ -24,3 +27,7 @@ pretty_assertions = "*"
 # rexpect = "*"
 spectral = "*"
 # tempfile = "*"
+
+[[test]]
+name = "test_main"
+harness = false
