--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ confy = "*"
 env_logger = "*"
 human-panic = "*"
 log = "*"
+num = { version = "0.4.3", features = ["num-bigint", "rand"] }
 predicates = "3.1.3"
 
 [dev-dependencies]
