--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ciborium = "0.2.2"
 clap = { version = "*", features = ["derive"] }
 clap-verbosity-flag = "*"
 confy = "*"
@@ -24,6 +25,7 @@ datatest-stable = "0.3.2"
 # duct = "*"
 # predicates = "*"
 pretty_assertions = "*"
+serde_test = "1.0.177"
 # rexpect = "*"
 spectral = "*"
 # tempfile = "*"
