--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ confy = "*"
 env_logger = "*"
 human-panic = "*"
 log = "*"
+rustyline = "15.0.0"
 serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
 toml = "0.8.20"
 
