--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ directories = "6.0.0"
 env_logger = "*"
 figment = { version = "0.10.19", features = ["env", "json", "serde_json", "serde_yaml", "toml", "yaml"] }
 human-panic = "*"
+lazy_static = "1.5.0"
 log = "*"
 rustyline = "15.0.0"
 serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
