--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tardi"
-version = "0.1.2"
-authors = ["Eric Rochester <eric.rochester@willowtreeapps.com>"]
+version = "0.2.1"
+authors = ["Eric Rochester <erochest@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,7 +11,14 @@ clap = { version = "*", features = ["derive"] }
 clap-verbosity-flag = "*"
 directories = "6.0.0"
 env_logger = "*"
-figment = { version = "0.10.19", features = ["env", "json", "serde_json", "serde_yaml", "toml", "yaml"] }
+figment = { version = "0.10.19", features = [
+  "env",
+  "json",
+  "serde_json",
+  "serde_yaml",
+  "toml",
+  "yaml",
+] }
 human-panic = "*"
 lazy_static = "1.5.0"
 log = "*"
