--- a/tardi-cli/Cargo.toml
+++ b/tardi-cli/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 authors = ["Eric Rochester <erochest@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "tardi-next"
+path = "src/main.rs"
 
 [dependencies]
 clap = { version = "*", features = ["derive"] }
