moved error module to core package

--- a/tardi-cli/Cargo.toml
+++ b/tardi-cli/Cargo.toml
@@ -15,6 +15,7 @@ confy = "*"
 env_logger = "*"
 human-panic = "*"
 log = "*"
+tardi-core = { path = "../tardi-core/" }
 
 [dev-dependencies]
 assert_cmd = "*"
