scanner integration tests

--- a/tardi-cli/Cargo.toml
+++ b/tardi-cli/Cargo.toml
@@ -22,7 +22,7 @@ assert_cmd = "2.0.0"
 # assert_fs = "*"
 # dir-diff = "*"
 # duct = "*"
-# predicates = "*"
+predicates = "3.1.0"
 pretty_assertions = "1.4.0"
 # rexpect = "*"
 spectral = "0.6.0"
