--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,24 +7,24 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "*", features = ["derive"] }
-clap-verbosity-flag = "*"
-confy = "*"
-env_logger = "*"
-human-panic = "*"
-log = "*"
+clap = { version = "4.5.51", features = ["derive"] }
+clap-verbosity-flag = "3.0.4"
+confy = "2.0.0"
+env_logger = "0.11.8"
+human-panic = "2.0.4"
+log = "0.4.28"
 
 [dev-dependencies]
-assert_cmd = "*"
-assert_fs = "*"
-datatest-stable = "0.3.2"
+assert_cmd = "2.1.1"
+assert_fs = "1.1.3"
+datatest-stable = "0.3.3"
 # dir-diff = "*"
 # duct = "*"
 # predicates = "*"
-pretty_assertions = "*"
-serde = { version = "1.0.217", features = ["derive"] }
+pretty_assertions = "1.4.1"
+serde = { version = "1.0.228", features = ["derive"] }
 # rexpect = "*"
-toml = "0.8.19"
+toml = "0.9.8"
 # tempfile = "*"
 
 [[test]]
